--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
  <body>
 
    <h1>Student Registration System</h1>
-   
+
+
+       <!-- student-form -->
    <div class="student-form">
        <h2>Add New Student</h2>
        <div class="form-group">
@@ -18,7 +20,7 @@
            <input type="text" id="name" placeholder="Enter student name">
            <div class="error" id="name-error"></div>
        </div>
-       
+           <!-- form-group -->
        <div class="form-group">
            <label for="class">Class:</label>
            <select id="class">
@@ -42,7 +44,7 @@
        <button id="add-student">Add Student</button>
        <button id="reset-form" style="background-color: #95a5a6;">Reset Form</button>
    </div>
-
+         <!-- stats-container -->
    <div class="stats-container">
        <div class="stat-card">
            <div class="stat-label">Total Students</div>
@@ -63,7 +65,7 @@
        <div class="tab" data-tab="by-class">By Class</div>
        <div class="tab" data-tab="by-grade">By Grade</div>
    </div>
-
+   <!-- tab-content active -->
    <div class="tab-content active" id="all-students">
        <h2>All Students</h2>
        <div class="search-container">
@@ -156,7 +158,7 @@
    </div>
 
    <footer>
-       <p>Student Registration System &copy; 2025 | <a href="https://github.com/nikkybel" class="footer-link" target="_blank">GitHub Repository</a></p>
+       <p>Student Registration System &copy; 2025 | <a href="https://github.com/nikkybel/Student-Register" class="footer-link" target="_blank">GitHub Repository</a></p>
    </footer>
    <script src="script.js"></script>
     
